# paila-ai-code-review-sdk

./: README.md  pyproject.toml
docs/: ai-integration.md  analyzers.md  api-reference.md  cli-reference.md  configuration.md  contributing.md  custom-rules.md  getting-started.md  index.md  integrations.md  project-structure.md  reporters.md
evaluation/: 01_test_core_modules.py  02_test_analyzers.py  03_test_reporters.py  04_test_ai_providers.py  05_test_integrations.py  06_test_parsers_utils.py  07_test_rules.py  08_test_cli.py  README.md  RESULTS.md  run_all_tests.py
examples/: advanced_usage.py  basic_usage.py
paila/: __init__.py  cli.py  config.py  models.py  reviewer.py
paila/ai/: __init__.py  enhancer.py  prompts.py
paila/ai/providers/: __init__.py  anthropic_provider.py  base.py  groq_provider.py  openai_provider.py
paila/analyzers/: __init__.py  base.py  complexity.py  security.py  smells.py
paila/integrations/: __init__.py  base.py  github.py  gitlab.py
paila/parsers/: __init__.py  base.py  python_parser.py
paila/reporters/: __init__.py  base.py  html.py  json_reporter.py  markdown.py  terminal.py
paila/rules/: __init__.py  base.py  builtin.py
paila/utils/: __init__.py  file_utils.py  hash_utils.py  text_utils.py
tests/: __init__.py  test_analyzers.py  test_reporters.py  test_reviewer.py
