[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paila"
version = "0.1.0"
description = "AI-Powered Code Review SDK by Saikrishna Paila"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Saikrishna Paila", email = "saikrishnapaila@gmail.com"}
]
maintainers = [
    {name = "Saikrishna Paila", email = "saikrishnapaila@gmail.com"}
]

keywords = [
    "code-review",
    "static-analysis",
    "security",
    "linting",
    "code-quality",
    "ai",
    "sdk",
    "ast",
    "complexity",
    "vulnerabilities"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Security",
]

requires-python = ">=3.10"

dependencies = [
    "rich>=13.0.0",        # Beautiful terminal output
    "pydantic>=2.0.0",     # Data validation (optional but recommended)
]

[project.optional-dependencies]
# AI features
ai = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
]

# All features
all = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "pygithub>=2.0.0",
    "gitpython>=3.1.0",
    "pyyaml>=6.0.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

# Documentation
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/saikrishnapaila/paila"
Documentation = "https://paila.readthedocs.io"
Repository = "https://github.com/saikrishnapaila/paila"
Issues = "https://github.com/saikrishnapaila/paila/issues"
Changelog = "https://github.com/saikrishnapaila/paila/blob/main/CHANGELOG.md"

[project.scripts]
paila = "paila.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["paila*"]

[tool.setuptools.package-data]
paila = ["py.typed"]

# ============================================================================
# BLACK
# ============================================================================
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

# ============================================================================
# RUFF
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

# ============================================================================
# MYPY
# ============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = [
    "tests/",
    "docs/",
]

# ============================================================================
# PYTEST
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ============================================================================
# COVERAGE
# ============================================================================
[tool.coverage.run]
source = ["paila"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
